recipe overview buttons spacing fixed, cards of equal size

--- a/cooking-umami/public/stylesheets/style.css
+++ b/cooking-umami/public/stylesheets/style.css
@@ -47,7 +47,12 @@ p {
 }
 
 .card-group img {
-  max-height: 400px;
+  max-height: 200px;
+}
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 /* Login Styles Start */
@@ -126,6 +131,15 @@ p {
 
 /* Login Styles End */
 
+/* Recipe Create & Edit Start */
+
+.recipe-forms {
+  font-size: larger;
+  font-weight: bolder;
+}
+
+/* Recipe Create & Edit End */
+
 /* Recipe Create Start */
 
 #duration {
@@ -133,6 +147,15 @@ p {
 }
 
 /* Recipe Create End */
+
+/* Recipe Details Start */
+.recipe-details {
+  color: black
+ }
+
+
+/* Recipe Details End */
+
 @media (max-width: 1000px) {
 
   h1,
